# weather_station

./: README.md  flake.nix  pyproject.toml  result  test.sh  weather.py
weather/: __init__.py  draw.py
weather/font/: README.md
